--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,7 +1,7 @@
 ---
 import Player from "@/components/Player";
 import AsideMenu from "@/components/AsideMenu.astro";
-import ViewTransitions from "astro/components/ViewTransitions.astro";
+import { ViewTransitions } from "astro:transitions";
 
 interface Props {
   title: string;
